Added new types